--- a/Convolutional Neural Network.ipynb
+++ b/Convolutional Neural Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "b675eddb",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D, Input, BatchNormalization\n",
-    "from tensorflow.keras import Model\n",
+    "from tensorflow.keras import Model, regularizers\n",
     "from tensorflow.keras.datasets import cifar10\n",
     "\n",
     "%matplotlib inline"
